--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <iframe id="secure-content" src="https://www.tiffyai.co.za/?secure=true" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
+  <iframe id="secure-content" src="https://www.tiffyai.co.za/" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
   <div id="tiffy-widget">
     <img src="TIFF.png" alt="TiffyAI Surprised">
